# riskdash

./: .gitignore  API_GATEWAY_README.md  README.md  TENANT_ONBOARDING_INSTRUCTIONS.md  add_tenants_endpoint.sh  addtenants.sh  api-gateway-tenant-routes.sh  aws_cli_database_cleanup_real.sh  check_endpoints.sh  compliance_iam_policy.sh  corsfix.sh  create_api_gateway.sh  create_task2_scripts.sh  debug-orchestrator.sh  debugorchestrator.sh  deploy_diag,sh  deploy_dynamodb_validators.sh  diagnos_apigw.sh  diagnose-tenants.py  fix-api-handlers.sh  fix-terraform-lambda-handlers.sh  fix_deploy_script.sh  fix_terraform_syntax.sh  fix_validate_endpoint.sh  fix_validators.sh  fix_verification.py  fixcrossvalidator.sh  fixfrontend.py  fixit.sh  fixorchestrator.sh  frontend-integration.sh  govcloudfix.sh  lambda_source_code_setup.sh  multitenant_role_assumption.sh  payload.json  proxy_diagnostic.sh  requirements.txt  setup-riskuity-tenant.sh  setup_riskuity_tenant.py  setup_tenantmgmt.sh  (+16 more)
Dummy/: 1  Dockerfile  DockerfileAWS  DockerfileAWSAlpine  Makefile  README.md  alembic.ini  bitbucket-pipelines.yml  console_only_logging.conf  db_tunnel.sh  dev_server_deploy.sh  docker-compose.yml  entrypoint.sh  logging.conf  main.py  manage.py  mkdocs.yml  pyproject.toml  sample_env_file.txt
Dummy/alembic/: env.py
Dummy/alembic/versions/: 844877d02043_task_updates.py
Dummy/config/: .bumpversion.cfg  .coveragerc  config.py  coverage.ini  pytest.ini
Dummy/deploy/: ConfigurationNotes.md  bastion.tf  cognito.tf  database.tf  docker-compose.yml  dynamo.tf  ecs.tf  load_balancer.tf  main.tf  network.tf  outputs.tf  s3.tf  sample.tfvars  tfplan  update_ecs.py  variables.tf
Dummy/deploy/aws_specific/: aws_initial_setup.md  iam_policy_ci_user.json
Dummy/docker_base/: .p10k.zsh  .zshrc  requirements-dev.txt
Dummy/docs/: changelog.md  cli-reference.md  credits.md  fedrisk_api-reference.md  mkdocs-instructions.md
Dummy/fedrisk_api/: __init__.py  hash.py
Dummy/fedrisk_api/cli/: cli.py
Dummy/fedrisk_api/db/: approval_workflows.py  assessment.py  audit_evidence.py  audit_test.py  aws_control.py  cap_poam.py  chat_bot_prompt.py  compliance_dashboard.py  control.py  control_class.py  control_family.py  control_phase.py  control_status.py  cost.py  dashboard.py  database.py  digital_signature.py  document.py  enums.py  evidence.py  exception.py  feature.py  framework.py  framework_version.py  help_section.py  history.py  import_framework.py  import_task.py  keyword.py  models.py  project.py  project_evaluation.py  project_group.py  reporting_dashboard.py  risk.py  risk_category.py  risk_impact.py  risk_likelihood.py  risk_mapping.py  risk_score.py  (+20 more)
Dummy/fedrisk_api/dynamodb/: __init__.py
Dummy/fedrisk_api/endpoints/: approval_workflows.py  assessment.py  audit_evidence.py  audit_test.py  aws_control.py  cap_poam.py  chat_bot_prompt.py  compliance_dashboard.py  control.py  control_class.py  control_family.py  control_phase.py  control_status.py  cost.py  digital_signature.py  document.py  evidence.py  exception.py  feature.py  framework.py  framework_version.py  governance_dashboard.py  help_section.py  history.py  import_framework.py  import_task.py  keyword.py  permissions.py  project.py  project_control.py  project_evaluation.py  project_group.py  reporting_dashboard.py  risk.py  risk_category.py  risk_dashboard.py  risk_impact.py  risk_likelihood.py  risk_mapping.py  risk_score.py  (+20 more)
Dummy/fedrisk_api/s3/: __init__.py
Dummy/fedrisk_api/schema/: approval_workflows.py  assessment.py  audit_evidence.py  audit_test.py  aws_control.py  cap_poam.py  chat_bot_prompt.py  compliance_dashboard.py  control.py  control_class.py  control_family.py  control_phase.py  control_status.py  cost.py  digital_signature.py  document.py  evidence.py  exception.py  feature.py  framework.py  framework_version.py  frequency.py  governance_dashboard.py  help_section.py  history.py  import_framework.py  import_task.py  keyword.py  payment.py  project.py  project_evaluation.py  project_group.py  risk.py  (+28 more)
Dummy/notebooks/: 01-24-CFR-674_Import.xlsx  10-24-800_53_R5_Import.xlsx  ParentChildWorkflowImport.xlsx  wbs-project-import-template.xls
(+227 files in other folders)
